--- a/project/plans/templates/plans/includes/generic_list.html
+++ b/project/plans/templates/plans/includes/generic_list.html
@@ -22,7 +22,7 @@
         {% if url_update %}{% url url_update item.id as url %}{% else %}{% define '' as url %}{% endif %}
         <tr data-url="{{ url }}">
             {% with item|get_obj_attr:type as name %}
-            <td class="text-left">{{ name }}{% if item.expense_type.necessary or item.saving_type or 'Būtin' in name %} <i class="far fa-star star"></i>{% endif %}</td>{% endwith %}
+            <td class="text-left">{{ name }}{% if item.expense_type.necessary or item.saving_type or 'Būtin' in name or item.title %} <i class="far fa-star star"></i>{% endif %}</td>{% endwith %}
             {% cell item.january %}
             {% cell item.february %}
             {% cell item.march %}
