--- a/project/plans/templates/plans/includes/necessarys_plan_form.html
+++ b/project/plans/templates/plans/includes/necessarys_plan_form.html
@@ -1,2 +1,2 @@
 {% load form %}
-{% generic_form title='Kitos būtinos išlaidos' update_container='necessary_list' %}
+{% generic_form title='Kitos būtinos išlaidos' update_container='necessary_list' chained_dropdown='plans_stats' %}
