overwiten bootstrap style - .invalid-feedback was display: none

--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -149,3 +149,8 @@ tr.total th {
     background-color: #fec2c6;
     color: #dc3545;
 }
+
+/* overwrite  bootstrap  class */
+.invalid-feedback {
+    display: block!important;
+}
