--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -66,7 +66,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/drinks/' in request.path %}active{% endif %}"
-              href="{% url 'drinks:drinks_list' %}">Gėrimai</a>
+              href="{% url 'drinks:drinks_index' %}">Gėrimai</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if '/plans/' in request.path %}active{% endif %}"
