--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 
 {% block head %}
@@ -27,6 +28,10 @@
         <div class="row">
             <div class="col-lg-1">
                 <div id="drinks-target-content" class="dblclick">{{ target_list }}</div>
+            </div>
+
+            <div class="col-lg-1">
+                <img src="{% static 'images/drinks_info.jpg' %}">
             </div>
         </div>
     </div>
