--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -13,29 +13,26 @@
 {% url 'drinks:drinks_target_new' as url_drinks_target %}
 <div class="row mt-2">
     <div class="col-lg-2">
-        <div class="row mt-2">
-            <div class="col-lg-12 text-right">
+        <div id="ajax-content" class="col-lg-12 dblclick">{{ drinks_list }}</div>
+    </div>
+
+    <div class="col-lg-5">
+
+        <div class="row">
+            <!-- target table -->
+            <div class="col-lg-12">
+                <div id="drinks-target-content" class="dblclick">{{ target_list }}</div>
+
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tiklą</button>
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
-        <div class="row mt-2">
-            <div id="ajax-content" class="col-lg-12 dblclick">{{ drinks_list }}</div>
-        </div>
     </div>
 
-    <div class="col-lg-10">
-        <div class="row">
-            <div class="col-lg-1">
-                <div id="drinks-target-content" class="dblclick">{{ target_list }}</div>
-            </div>
-
-            <div class="col-lg-6">
-                <div class="mb-5">{% include 'drinks/includes/chart_consumsion_per_month.html' %}</div>
-                <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="90%"></div>
-            </div>
-
-        </div>
+    <div class="col-lg-5">
+        <!-- consumsion chart -->
+        <div class="mb-5">{% include 'drinks/includes/chart_consumsion_per_month.html' %}</div>
+        <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="90%"></div>
     </div>
 </div>
 
