disabled y axis text

--- a/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
@@ -47,7 +47,7 @@
             labels: {
             },
             title: {
-                text: 'mililitrai'
+                text: ''
             },
             plotLines: [{
                 color: '#04a41f',
