--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -28,12 +28,12 @@
     </div>
 
     <div class="col-lg-5">
-
+        <div class="mb-5">{% include 'drinks/includes/chart_quantity_per_month.html' %}</div>
         <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="90%"></div>
     </div>
 
     <div class="col-lg-2">
-        <div id="ajax-content" class="col-lg-12 dblclick">{{ drinks_list }}</div>
+        <div id="ajax-content" class="dblclick">{{ drinks_list }}</div>
     </div>
 
 </div>
