chart quantity rendered to context

--- a/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
@@ -67,7 +67,7 @@
         series: [{
             name: 'Kiekis',
             color: 'rgba(166,193,110,0.8)',
-            data: {{ chart_quantity_data|safe }},
+            data: {{ data|safe }},
             pointPadding: 0,
             pointPlacement: 0,
             // borderColor: 'grey',
