--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col-lg-5">
-        <div class="mb-5">{% include 'drinks/includes/chart_quantity_per_month.html' %}</div>
+        <div class="mb-5">{{ chart_quantity }}</div>
         <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="90%"></div>
     </div>
 
