chart consumsion rendered to context

--- a/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
@@ -101,7 +101,7 @@
             type: 'areaspline',
             name: 'Alkoholio kiekis per dieną, ml',
             showInLegend: false,
-            data: {{ chart_consumsion|safe }},
+            data: {{ data|safe }},
             color: '#c0504d',
                 dataLabels: {
                 enabled: true,
