--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -17,7 +17,7 @@
             <!-- target table -->
             <div class="col-lg-12">
                 <!-- consumsion chart -->
-                <div class="mb-5">{% include 'drinks/includes/chart_consumsion_per_month.html' %}</div>
+                <div class="mb-5">{{ chart_consumsion }}</div>
 
                 <div id="drinks-target-content" class="dblclick">{{ target_list }}</div>
 
