--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -21,7 +21,7 @@
 
                 <div id="drinks-target-content" class="dblclick">{{ target_list }}</div>
 
-                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tiklą</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslą</button>
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
             </div>
         </div>
