information tables: consumsion, alcohol, last day

--- a/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
@@ -40,7 +40,8 @@
                 style: {
                     fontSize: '10px',
                     fontFamily: 'Calibri, Verdana',
-                }
+                },
+                rotation: -45,
             }
         },
         yAxis: {
