--- a/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_quantity_per_month.html
@@ -31,7 +31,8 @@
                 style: {
                     fontSize: '10px',
                     fontFamily: 'Calibri, Verdana',
-                }
+                },
+                rotation: -45,
             }
         },
         yAxis: {
