--- a/project/drinks/templates/drinks/includes/reload_stats.html
+++ b/project/drinks/templates/drinks/includes/reload_stats.html
@@ -2,3 +2,8 @@
 
 <div id="chart_quantity">{{ chart_quantity }}</div>
 
+<div id="tbl_consumsion">{{ tbl_consumsion }}</div>
+
+<div id="tbl_last_day">{{ tbl_last_day }}</div>
+
+<div id="tbl_alcohol">{{ tbl_alcohol }}</div>
