--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -12,14 +12,19 @@
 {% url 'drinks:drinks_new' as url_drinks %}
 {% url 'drinks:drinks_target_new' as url_drinks_target %}
 <div class="row mt-2">
-    <div class="col-lg-5">
+    <div class="col-lg-6">
         <div class="row">
             <!-- target table -->
             <div class="col-lg-12">
                 <!-- consumsion chart -->
-                <div class="mb-5" id="chart_consumsion">{{ chart_consumsion }}</div>
+                <div class="mb-3" id="chart_consumsion">{{ chart_consumsion }}</div>
 
-                <div id="drinks-target-content" class="dblclick">{{ target_list }}</div>
+                <div class="row">
+                    <div id="tbl_consumsion" class="col-lg-3 pr-0">{{ tbl_consumsion }}</div>
+                    <div id="tbl_last_day" class="col-lg-4 px-0 pl-2">{{ tbl_last_day }}</div>
+                    <div id="tbl_alcohol" class="col-lg-2 px-0 pl-2">{{ tbl_alcohol }}</div>
+                    <div id="drinks-target-content" class="col-lg-3 pl-2 dblclick">{{ target_list }}</div>
+                </div>
 
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks_target }}"><i class="fas fa-plus"></i> Metų tikslą</button>
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_drinks }}"><i class="fas fa-plus"></i> Įrašą</button>
@@ -27,9 +32,9 @@
         </div>
     </div>
 
-    <div class="col-lg-5">
-        <div class="mb-5" id="chart_quantity">{{ chart_quantity }}</div>
-        <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="90%"></div>
+    <div class="col-lg-4">
+        <div class="mb-3" id="chart_quantity">{{ chart_quantity }}</div>
+        <div class="text-center pl-5"><img src="{% static 'images/drinks_info.jpg' %}" width="100%"></div>
     </div>
 
     <div class="col-lg-2">
@@ -51,9 +56,19 @@
             },
             success: function (data) {
                 var chart_consumsion = $(data).filter('#chart_consumsion');
-                var chart_quantity = $(data).filter('#chart_quantity');
                 $('#chart_consumsion').html(chart_consumsion);
+
+                var chart_quantity = $(data).filter('#chart_quantity');
                 $('#chart_quantity').html(chart_quantity);
+
+                var tbl_consumsion = $(data).filter('#tbl_consumsion');
+                $('#tbl_consumsion').html(tbl_consumsion);
+
+                var tbl_last_day = $(data).filter('#tbl_last_day');
+                $('#tbl_last_day').html(tbl_last_day);
+
+                var tbl_alcohol = $(data).filter('#tbl_alcohol');
+                $('#tbl_alcohol').html(tbl_alcohol);
             }
         });
     });
