changed chart type areaspline -> area

--- a/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
@@ -94,12 +94,12 @@
             enabled: false
         },
         plotOptions: {
-            areaspline: {
+            area: {
                 fillOpacity: 0.4
             }
         },
         series: [{
-            type: 'areaspline',
+            type: 'area',
             name: 'Alkoholio kiekis per dieną, ml',
             showInLegend: false,
             data: {{ data|safe }},
