--- a/project/drinks/templates/drinks/includes/reload_stats.html
+++ b/project/drinks/templates/drinks/includes/reload_stats.html
@@ -7,3 +7,5 @@
 <div id="tbl_last_day">{{ tbl_last_day }}</div>
 
 <div id="tbl_alcohol">{{ tbl_alcohol }}</div>
+
+<div id="tbl_std_av">{{ tbl_std_av }}</div>
