--- a/project/drinks/templates/drinks/includes/tbl_alcohol.html
+++ b/project/drinks/templates/drinks/includes/tbl_alcohol.html
@@ -1,6 +1,6 @@
 <table class="table table-hover stats">
     <thead class="thead-light">
-        <tr class="top-text"><th>Grynas alkoholis</th></tr>
+        <tr class="top-text"><th>C<sub>2</sub>H<sub>5</sub>OH</th></tr>
         <tr class="top">
             <th class="text-right">Litrai</th>
         </tr>
