more tests for drinks views, changes in code to pass these tests

--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -11,6 +11,8 @@
         <tr data-url="{{ url_update }}">
             <td>{{ item.quantity }}</td>
         </tr>
+        {% empty %}
+        <tr><td>Neįvestas tikslas</td></tr>
         {% endfor %}
     </tbody>
 </table>
