--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -32,11 +32,9 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ request.user.profile.year|title }}</a>
             <div class="dropdown-menu">
               {% with request.resolver_match.view_name as m_url %}
-              <a class="dropdown-item" href="{% url 'core:set_year' 2019 m_url  %}">2019</a>
-              <a class="dropdown-item" href="{% url 'core:set_year' 2018 m_url  %}">2018</a>
-              <a class="dropdown-item" href="{% url 'core:set_year' 2017 m_url  %}">2017</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Separated link</a>
+              {% for y in years %}
+              <a class="dropdown-item btn-sm py-1 pl-2" href="{% url 'core:set_year' y m_url  %}">{{ y|safe }}</a>
+              {% endfor %}
               {% endwith %}
             </div>
           </li>
