--- a/project/core/templates/core/includes/generic_form.html
+++ b/project/core/templates/core/includes/generic_form.html
@@ -56,11 +56,18 @@
 
     // replace dot in year field
     $(document).ready(function () {
-        var year = $("#id_year:text").attr('value')
-        year = year.replace(".", "");
+        var fields = ['year', 'closed', 'valid_for'];
+        var len = fields.length;
+        for(i = 0; i < len; i++) {
+            var field = fields[i];
+            var year = $(`#id_${field}:text`).attr('value')
+            if (year) {
+                year = year.replace(".", "");
 
-        $("#id_year").attr('value', year);
-        $("#id_year:text").val(year);
+                $(`#id_${field}`).attr('value', year);
+                $(`#id_${field}:text`).val(year);
+            }
+        }
     });
 </script>
 
