fixed error, if no funds, also not displaying pension table, because of nested if's

--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -6,6 +6,7 @@
         {% savings_worth_table fund fund_totals label='Fondai' %}
     </div>
 </div>
+{% endif %}
 
 {% if pension %}
 <div class="row mt-5">
@@ -13,4 +14,4 @@
         {% savings_worth_table pension pension_totals label='Pensija' %}
     </div>
 </div>
-{% endif %}{% endif %}
+{% endif %}
