--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -3,7 +3,7 @@
 {% if fund %}
 <div class="row">
     <div class="col-lg-12">
-        {% savings_worth_table fund fund_totals label='Fondai' %}
+        {% savings_worth_table fund fund_total_row label='Fondai' %}
     </div>
 </div>
 {% endif %}
@@ -11,7 +11,7 @@
 {% if pension %}
 <div class="row mt-5">
     <div class="col-lg-12">
-        {% savings_worth_table pension pension_totals label='Pensija' %}
+        {% savings_worth_table pension pension_total_row label='Pensija' %}
     </div>
 </div>
 {% endif %}
