fixed errors, wrong ajax update container names

--- a/project/pensions/templates/pensions/includes/pensions_type_form.html
+++ b/project/pensions/templates/pensions/includes/pensions_type_form.html
@@ -1,2 +1,2 @@
 {% load form %}
-{% generic_form title='Pensijų fondai' update_container='ajax-content-categories' %}
+{% generic_form title='Pensijų fondai' update_container='pension-categories' %}
