--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="row mt-2">
-            <div id="ajax-content" class="col-lg-12 dblclick">{{ pension }}</div>
+            <div id="pension-content" class="col-lg-12 dblclick">{{ pension }}</div>
         </div><!-- End Pensions -->
     </div>
 
