--- a/project/pensions/templates/pensions/index.html
+++ b/project/pensions/templates/pensions/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="row">
-            <div id="ajax-content-categories" class="col-lg-12 pl-0 dblclick">{{ categories }}</div>
+            <div id="pension-categories" class="col-lg-12 pl-0 dblclick">{{ categories }}</div>
         </div>
     </div>
 </div>
