renamed template variable

--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -18,7 +18,7 @@
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
             </div>
         </div>
-        <div id="ajax-content" class="dblclick">{{ expenses }}</div>
+        <div id="expenses_list" class="dblclick">{{ expenses }}</div>
     </div>
 
     <div class="col-lg-4">
