wealth_money and wealth

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -117,7 +117,7 @@
                 <tr class="top"><th class="text-right">Pinigai</th></tr>
             </thead>
             <tfoot>
-                <tr>{% cell amount_start tag='th' %}</tr>
+                <tr>{% cell wealth_money tag='th' %}</tr>
             </tfoot>
         </table>
 
@@ -127,7 +127,7 @@
                 <tr class="top"><th class="text-right">Turtas</th></tr>
             </thead>
             <tfoot>
-                <tr>{% cell amount_start|add:total_market tag='th' %}</tr>
+                <tr>{% cell wealth tag='th' %}</tr>
             </tfoot>
         </table>
     </div>
