--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-lg-9 pl-0">
                 <div class="row">
-                    <div style="display: none;" id='expenses-visibility' class="col-lg-12">{% include 'bookkeeping/includes/chart_month_expenses.html' %}</div>
+                    <div style="display: none;" id='expenses-visibility' class="col-lg-12">{{ chart_expenses }}</div>
                     <div id='target-visibility' class="col-lg-12">{{ chart_targets }}</div>
                 </div>
                 <div class="row mt-2">
