--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -20,9 +20,7 @@
                     <div id='target-visibility' class="col-lg-12">{{ chart_targets }}</div>
                 </div>
                 <div class="row mt-2">
-                    <div class="col-lg-12">
-                        {% include 'bookkeeping/includes/month_spending_info.html' %}
-                    </div>
+                    <div class="col-lg-12">{{ info }}</div>
                 </div>
             </div>
         </div>
