--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -28,17 +28,23 @@
 </div>
 
 <div class="row my-2">
-    <div class="col-lg-10">
+    <div class="col-lg-8">
         {% with request.user.profile.month as month %}
         {% for m in month_list %}
         {% with m|date:'n' as m_num %}
         <a href="{% url 'core:set_month' m_num 'bookkeeping:month' %}" class="btn btn-sm mr-1 px-3 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
         {% endwith %}{% endfor %}{% endwith %}
     </div>
-    <div class="col-lg-2 text-right">
-        {% url 'expenses:expenses_new' as url_expense_new %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_expense_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
-        <button class="btn btn-sm btn-info ml-2" onclick="myFunction()">Rodyti kitą grafiką</button>
+    <div class="col-lg-4 text-right">
+        {% url 'expenses:expenses_new' as url_expenses_new %}
+        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
+        {% url 'incomes:incomes_new' as url_incomes_new %}
+        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_incomes_new }}"><i class="fas fa-plus"></i> Pajamas</button>
+        {% url 'savings:savings_new' as url_savings_new %}
+        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_savings_new }}"><i class="fas fa-plus"></i> Taupymą</button>
+        {% url 'transactions:transactions_new' as url_transactions_new %}
+        <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_transactions_new }}"><i class="fas fa-plus"></i> Pervedimą</button>
+        <button class="btn btn-sm btn-info ml-1" onclick="myFunction()">Rodyti kitą grafiką</button>
     </div>
 </div>
 <script>
