--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -8,6 +8,8 @@
     <tbody>
         {% for item in items %}
         {% url 'drinks:drinks_update' item.id as url_update %}
+        {% ifchanged item.date|date:"F" %}<tr>{% if not forloop.first %}<td colspan="2" class="row-spacer"></td>{% endif %}</tr>
+        {% endifchanged %}
         <tr data-url="{{ url_update }}">
             <td class="text-left">{{ item.date|date:"Y-m-d" }}</td>
             <td>{{ item.quantity }}</td>
